# Legal-Assistant

./: .gitignore  README.md  main.py  pyproject.toml
okf_generator/: __init__.py  canonical.py  exporter.py  llm_enricher.py  main.py  markdown_generator.py  metadata.py  validator.py  yaml_generator.py
okf_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
okf_generator/models/: __init__.py  document.py  enrichment.py  metadata.py  okf.py  section.py
okf_generator/parser/: __init__.py  pdf_reader.py  section_detector.py  section_parser.py  toc_parser.py
templates/: section.md.jinja
tests/: test_canonical_and_metadata.py  test_exporter.py  test_llm_enricher.py  test_pdf_reader.py  test_toc_and_sections.py  test_validator.py  test_yaml_and_markdown.py
